--- a/OSSRhelScan.yml
+++ b/OSSRhelScan.yml
@@ -1,6 +1,4 @@
 ---
+# tasks file for license scan
 - name: Get License of standard installed packages in RHEL
-  hosts: all
-  tasks:
-  - name: run RPM
   shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
