--- a/OSSRhelScan.yml
+++ b/OSSRhelScan.yml
@@ -1,4 +1,9 @@
----
+  ---
 # tasks file for license scan
-- name: Get License of standard installed packages in RHEL
-  shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
+
+- hosts: all
+  #remote_user: root
+
+  tasks:
+  - name: Get License of standard installed packages in RHEL
+    shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
