--- a/OSSRhelScan.yml
+++ b/OSSRhelScan.yml
@@ -1,8 +1,7 @@
   ---
 # tasks file for license scan
-
-- hosts: all
-  #remote_user: root
+- name: OSS
+  hosts: all
 
   tasks:
   - name: Get License of standard installed packages in RHEL
