--- a/OSSRhelScan.yml
+++ b/OSSRhelScan.yml
@@ -6,3 +6,5 @@
   tasks:
   - name: Get License of standard installed packages in RHEL
     shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
+    args:
+      warn: false #false so rpm usage is allowed
