--- a/OSSRhelScan.yml
+++ b/OSSRhelScan.yml
@@ -2,9 +2,12 @@
 # tasks file for license scan
 - name: OSS
   hosts: all
+  gather_facts: no
 
   tasks:
   - name: Get License of standard installed packages in RHEL
     shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
+    register: rpm
     args:
       warn: false #false so rpm usage is allowed
+  - debug: var=rpm.stdout_lines
