--- a/OSSScanToFile.yml
+++ b/OSSScanToFile.yml
@@ -12,5 +12,5 @@
       warn: false #false so rpm usage is allowed
   - debug: var=rpm.stdout_lines
   - fetch:
-      content: "{{ rpm }}"
+      src: "{{ rpm }}"
       dest: /tmp/out/{{ inventory_hostname }}.json
