--- a/OSSScanToFile.yml
+++ b/OSSScanToFile.yml
@@ -12,6 +12,6 @@
       warn: false #false so rpm usage is allowed
   - debug: var=rpm.stdout_lines
   - local_action:
-    copy
+    copy:
       content = "{{ rpm.stdout_lines }}"
       dest: /tmp/out/{{ inventory_hostname }}.json
