--- a/OSSScanToFile.yml
+++ b/OSSScanToFile.yml
@@ -6,7 +6,7 @@
 
   tasks:
   - name: Get License of standard installed packages in RHEL
-    shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
+    shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n" >> licenses.txt'
     register: rpm
     args:
       warn: false #false so rpm usage is allowed
