--- a/OSSScanToFile.yml
+++ b/OSSScanToFile.yml
@@ -5,13 +5,13 @@
   gather_facts: no
 
   tasks:
-  - name: Get License of standard installed packages in RHEL
-    shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n" >> licenses.txt'
+  - name: List licenses of standard installed packages in RHEL
+    shell: 'rpm -qa --qf "%{name}, %{version}, %{arch}, %{license} \n"'
     register: rpm
     args:
       warn: false #false so rpm usage is allowed
   - debug: var=rpm.stdout_lines
   - name: Generate output file
-    local_action:
-      copy content="{{ rpm.stdout_lines }}"
-      dest=/home/aleoniak/share/{{ inventory_hostname }}.json
+    template: 
+      src: {{ rpm.stdout_lines }}
+      dest: "/tmp/licenses.js"
