--- a/OSSDebian.yml
+++ b/OSSDebian.yml
@@ -4,7 +4,8 @@
   hosts: all
   gather_facts: no
 
+  tasks:
   - name: Copy dpkg-licenses to remote
     copy:
-    src: "/tmp/dpkg-licenses"
-    dest: "/tmp/dpkg-licenses"
+      content: "/tmp/dpkg-licenses"
+      dest: "/tmp/dpkg-licenses"
